commit before scafolding

--- a/WebApplication1/Views/User/CreateUser.cshtml
+++ b/WebApplication1/Views/User/CreateUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ViewModel.UserViewModel
+﻿@model WebApplication1.Models.User
 
 @{
     ViewData["Title"] = "Create User";
